# MPTS

./: .gitignore  LICENSE  README.md
Centralized/: .gitignore  CMakeLists.txt  README.md
Centralized/inc/: Hungarian.h  I_solution.h  Input.h  MASPInput.h  MASPSolver.h  MASP_BalMatch.h  MASP_BranchAndBound.h  MASP_BranchAndMatch.h  MASP_EdgeCutting.h  MASP_FastComp.h  MASP_GradientSearch.h  MASP_LogBalMatch.h  MASP_MatchAct.h  MASP_MatchGS.h  MASP_MinDist.h  MASP_Swap.h  MASP_TMatch.h  MASP_comp.h  PoissonBinomial.h  Solver.h  Utilities.h  defines.h
Centralized/src/: I_solution.cpp  Input.cpp  MASPInput.cpp  MASPSolver.cpp  MASP_BalMatch.cpp  MASP_BranchAndBound.cpp  MASP_BranchAndMatch.cpp  MASP_EdgeCutting.cpp  MASP_FastComp.cpp  MASP_GradientSearch.cpp  MASP_LogBalMatch.cpp  MASP_MatchAct.cpp  MASP_MatchGS.cpp  MASP_MinDist.cpp  MASP_Swap.cpp  MASP_TMatch.cpp  MASP_comp.cpp  Solver.cpp  main.cpp
Centralized/test/: masp-input-gen.py  run_casestudy.sh  run_exp0Swap.sh  run_exp5.sh  run_exp6.sh  run_exp7.sh  run_exp8.sh
Centralized/test/CaseStudy/: case_study.txt  input_setup.txt
Centralized/test/Experiments5/: plot_10_0.txt  plot_10_1.txt  plot_10_10.txt  plot_10_11.txt  plot_10_12.txt  plot_10_13.txt  plot_10_14.txt  plot_10_15.txt  plot_10_16.txt  plot_10_17.txt  plot_10_18.txt  plot_10_19.txt  plot_10_2.txt  plot_10_20.txt  plot_10_21.txt  plot_10_22.txt  plot_10_23.txt  plot_10_24.txt  plot_10_25.txt  plot_10_26.txt  plot_10_27.txt  plot_10_28.txt  plot_10_29.txt  plot_10_3.txt  plot_10_30.txt  plot_10_31.txt  plot_10_32.txt  plot_10_33.txt  plot_10_34.txt  plot_10_35.txt  plot_10_36.txt  plot_10_37.txt  plot_10_38.txt  plot_10_39.txt  plot_10_4.txt  plot_10_40.txt  plot_10_41.txt  plot_10_42.txt  plot_10_43.txt  plot_10_44.txt  (+1260 more)
Centralized/test/Experiments6/: input_setup.txt  plot_0_0.txt  plot_0_1.txt  plot_0_10.txt  plot_0_11.txt  plot_0_12.txt  plot_0_13.txt  plot_0_14.txt  plot_0_15.txt  plot_0_16.txt  plot_0_17.txt  plot_0_18.txt  plot_0_19.txt  plot_0_2.txt  plot_0_20.txt  plot_0_21.txt  plot_0_22.txt  plot_0_23.txt  plot_0_24.txt  plot_0_25.txt  plot_0_26.txt  plot_0_27.txt  plot_0_28.txt  plot_0_29.txt  plot_0_3.txt  plot_0_30.txt  plot_0_31.txt  plot_0_32.txt  plot_0_33.txt  plot_0_34.txt  plot_0_35.txt  plot_0_36.txt  plot_0_37.txt  plot_0_38.txt  plot_0_39.txt  plot_0_4.txt  plot_0_40.txt  plot_0_41.txt  (+613 more)
Distributed/: CMakeLists.txt  masp-input-gen-16.py  masp-input-gen-8.py
Distributed/inc/: GradientSolver.h  HungGSSolver.h  MsgSender.h  MsgServer.h  Node.h  P2P.h  Solver.h  defines.h
Distributed/src/: GradientSolver.cpp  HungGSSolver.cpp  MsgSender.cpp  MsgServer.cpp  Node.cpp  P2P.cpp  PoissonBinomial.cpp  Solver.cpp  driver.cpp
Distributed/test/: masp-input-gen.py  run_exp.sh
(+2003 files in other folders)
